src/inc/themes/h/scss/_viewer.scss
.mkl_pc_viewer {
	position: absolute;
	z-index: 1;
	left: 0; 
	top: 0;
	right: 0;
	bottom: var(--toolbar_height);
	background: color(viewer-bg);

	@media( max-width: $small_screen_width ) {
		// right: 0;
		bottom: calc( var(--toolbar_height) - var(--footer-height-small-screen) );
		// top: 0;
	}

	.angles-select {
		position: absolute;
		left: 2em;
		top: 2em;
		z-index: 2;
		> a {
			display: none;
		}
		ul{
			padding: 0;
			margin: 0;
			list-style-type: none;
		}

		li {
			display: inline-block;
			margin-right: 0.5em;
			a {
				display: block;
				padding: 0;
				padding-bottom: 6px;
				text-align: center;
				color: black;
				text-decoration: none;
				text-transform: uppercase;
				font-size: 0.9em;

				.angle-image {
					width: 24px;
					display: inline-block;
				}
			}
			
			&.active a {
				border-bottom: 2px solid;
			}

		}
		@media (max-width: $small_screen_width) {
			> a span {
				display: none;
			}
			> a::before {
				margin-right: 0;
			}
			> a::before {
				margin-right: 0;
			}
			&:hover > a span,
			&:focus-within > a span,
			& > a:focus span {
				display: inline-block;
				margin-left: 1em;
			}
		}
	}
	.mkl_pc_layers {
		position: absolute;
		top: 0;
		left: 0;
		right: 0;
		bottom: 0;
		text-align: center;
		user-select: none;

		img {
			transition: .2s all;
			&:not(.active), &.loading {
				opacity: 0;
			}
			position: absolute;
			left: 50%;
			top: 50%;
			transform: translateX(-50%) translateY(-50%);
			max-height: 100%;
		}
		.images-loading {
			display: block;
			width: 30px;
			height: 30px;
			background: color(primary);
			position: absolute;
			left: 2em;
			bottom: 2em;
			opacity: 0;
			transition: all .2s;
			border-radius: 50%;
			-webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
			animation: sk-scaleout 1.0s infinite ease-in-out;
		}

		img.loading ~ .images-loading {
			opacity: 1;
		}				
	}
} 

